# passwordless-sandbox

./: .gitignore  README.md  example.env  package-lock.json  package.json  pyproject.toml  serverless.yml
sandbox/: database.py  email.py  main.py  schemas.py  server.py
