[tool.poetry]
name = "passwordless-sandbox"
version = "0.1.0"
description = "Experiments with passwordless login flows"
authors = ["Jeff Fredrickson <jeffrey.fredrickson@gsa.gov>"]
readme = "README.md"
packages = [{include = "sandbox"}]

[tool.poetry.scripts]
server = "sandbox.server:local_server"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
boto3 = "^1.25.2"
mangum = "^0.16.0"
email-validator = "^1.3.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
